# temp-mail

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  setup.ps1  setup.sh
src/: db.rs  http.rs  main.rs  smtp.rs
templates/: inbox.html  index.html  message.html
